# PixelateIt

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
PixelateIt/: __main__.py  utils.py
test/: test.py
tests/: test_main_utils.py
